basic files created

--- a/girusantal_hf7/index.html
+++ b/girusantal_hf7/index.html
@@ -14,12 +14,12 @@
 <body>
     <nav>
         <ul>
-            <li class="logo">
+            <!-- <li class="logo">
                 <a href="https://www.formula1.com/"><img src="./img/f1-logo.png" alt="F1 logo"></a>
-            </li>
+            </li> -->
             <li>
                 <a href="index.html">Főmenü</a>
-             </li>
+            </li>
             <li>
                 <a href="circuits.html">Pályák</a>
             </li>
@@ -158,12 +158,12 @@
                     <th class="ch24-head">Csapat</th>
                     <th class="ch24-head">Pontok</th>
                 </tr>
-                    <td class="ch24">1.</td>
-                    <td class="ch24"><img src="./img/Max_Verstappen.webp" alt="Max Verstappen"></td>
-                    <td class="ch24">Max Verstappen</td>
-                    <td class="ch24"><img src="./img/redbull-1.png" alt="Red Bull Racing Honda RBPT"></td>
-                    <td class="ch24">Red Bull Racing Honda RBPT</td>
-                    <td class="ch24">403</td>
+                <td class="ch24">1.</td>
+                <td class="ch24"><img src="./img/Max_Verstappen.webp" alt="Max Verstappen"></td>
+                <td class="ch24">Max Verstappen</td>
+                <td class="ch24"><img src="./img/redbull-1.png" alt="Red Bull Racing Honda RBPT"></td>
+                <td class="ch24">Red Bull Racing Honda RBPT</td>
+                <td class="ch24">437</td>
                 </tr>
                 <tr>
                     <td class="ch24">2.</td>
@@ -171,7 +171,7 @@
                     <td class="ch24">Lando Norris</td>
                     <td class="ch24"><img src="./img/mclaren-1.png" alt="McLaren Mercedes"></td>
                     <td class="ch24">McLaren Mercedes</td>
-                    <td class="ch24">340</td>
+                    <td class="ch24">374</td>
                 </tr>
                 <tr>
                     <td class="ch24">3.</td>
@@ -179,7 +179,7 @@
                     <td class="ch24">Charles Leclerc</td>
                     <td class="ch24"><img src="./img/ferrari-1.png" alt="Ferrari"></td>
                     <td class="ch24">Ferrari</td>
-                    <td class="ch24">319</td>
+                    <td class="ch24">356</td>
                 </tr>
                 <tr>
                     <td class="ch24">4.</td>
@@ -187,7 +187,7 @@
                     <td class="ch24">Oscar Piastri</td>
                     <td class="ch24"><img src="./img/mclaren-1.png" alt="McLaren Mercedes"></td>
                     <td class="ch24">McLaren Mercedes</td>
-                    <td class="ch24">268</td>
+                    <td class="ch24">292</td>
                 </tr>
                 <tr>
                     <td class="ch24">5.</td>
@@ -195,7 +195,7 @@
                     <td class="ch24">Carlos Sainz</td>
                     <td class="ch24"><img src="./img/ferrari-1.png" alt="Ferrari"></td>
                     <td class="ch24">Ferrari</td>
-                    <td class="ch24">259</td>
+                    <td class="ch24">290</td>
                 </tr>
                 <tr>
                     <td class="ch24">6.</td>
@@ -203,7 +203,7 @@
                     <td class="ch24">George Russell</td>
                     <td class="ch24"><img src="./img/mercedes-logo.png" alt="Mercedes"></td>
                     <td class="ch24">Mercedes</td>
-                    <td class="ch24">217</td>
+                    <td class="ch24">245</td>
                 </tr>
                 <tr>
                     <td class="ch24">7.</td>
@@ -211,7 +211,7 @@
                     <td class="ch24">Lewis Hamilton</td>
                     <td class="ch24"><img src="./img/mercedes-logo.png" alt="Mercedes"></td>
                     <td class="ch24">Mercedes</td>
-                    <td class="ch24">208</td>
+                    <td class="ch24">223</td>
                 </tr>
                 <tr>
                     <td class="ch24">8.</td>
@@ -227,31 +227,31 @@
                     <td class="ch24">Fernando Alonso</td>
                     <td class="ch24"><img src="./img/aston-martin.png" alt="Aston Martin Aramco Mercedes"></td>
                     <td class="ch24">Aston Martin Aramco Mercedes</td>
-                    <td class="ch24">62</td>
+                    <td class="ch24">70</td>
                 </tr>
                 <tr>
                     <td class="ch24">10.</td>
+                    <td class="ch24"><img src="./img/gasly-2.png" alt="Pierre Gasly"></td>
+                    <td class="ch24">Pierre Gasly</td>
+                    <td class="ch24"><img src="./img/alpine-1.png" alt="Alpine Renault"></td>
+                    <td class="ch24">Alpine Renault</td>
+                    <td class="ch24">42</td>
+                </tr>
+                <tr>
+                    <td class="ch24">11.</td>
                     <td class="ch24"><img src="./img/hulkenberg-1.png" alt="Nico Hülkenberg"></td>
                     <td class="ch24">Nico Hülkenberg</td>
                     <td class="ch24"><img src="./img/haas-1.png" alt="Haas Ferrari"></td>
                     <td class="ch24">Haas Ferrari</td>
-                    <td class="ch24">35</td>
+                    <td class="ch24">41</td>
                 </tr>
                 <tr>
-                    <td class="ch24">11.</td>
+                    <td class="ch24">12.</td>
                     <td class="ch24"><img src="./img/tsunoda-2.png" alt="Yuki Tsunoda"></td>
                     <td class="ch24">Yuki Tsunoda</td>
                     <td class="ch24"><img src="./img/visarb-1.png" alt="Visa Cash App RB"></td>
                     <td class="ch24">Visa Cash App RB</td>
                     <td class="ch24">30</td>
-                </tr>
-                <tr>
-                    <td class="ch24">12.</td>
-                    <td class="ch24"><img src="./img/gasly-2.png" alt="Pierre Gasly"></td>
-                    <td class="ch24">Pierre Gasly</td>
-                    <td class="ch24"><img src="./img/alpine-1.png" alt="Alpine Renault"></td>
-                    <td class="ch24">Alpine Renault</td>
-                    <td class="ch24">26</td>
                 </tr>
                 <tr>
                     <td class="ch24">13.</td>
@@ -275,7 +275,7 @@
                     <td class="ch24">Kevin Magnussen</td>
                     <td class="ch24"><img src="./img/haas-1.png" alt="Haas Ferrari"></td>
                     <td class="ch24">Haas Ferrari</td>
-                    <td class="ch24">14</td>
+                    <td class="ch24">16</td>
                 </tr>
                 <tr>
                     <td class="ch24">16.</td>
@@ -311,19 +311,19 @@
                 </tr>
                 <tr>
                     <td class="ch24">20.</td>
+                    <td class="ch24"><img src="./img/guanyu.png" alt="Zhou Guanyu"></td>
+                    <td class="ch24">Zhou Guanyu</td>
+                    <td class="ch24"><img src="./img/kick-sauber.png" alt="Stake F1 Team"></td>
+                    <td class="ch24">Stake F1 Team</td>
+                    <td class="ch24">4</td>
+                </tr>
+                <tr>
+                    <td class="ch24">21.</td>
                     <td class="ch24"><img src="./img/lawson.png" alt="Liam Lawson"></td>
                     <td class="ch24">Liam Lawson</td>
                     <td class="ch24"><img src="./img/visarb-1.png" alt="Visa Cash App RB"></td>
                     <td class="ch24">Visa Cash App RB</td>
                     <td class="ch24">4</td>
-                </tr>
-                <tr>
-                    <td class="ch24">21.</td>
-                    <td class="ch24"><img src="./img/guanyu.png" alt="Zhou Guanyu"></td>
-                    <td class="ch24">Zhou Guanyu</td>
-                    <td class="ch24"><img src="./img/kick-sauber.png" alt="Stake F1 Team"></td>
-                    <td class="ch24">Stake F1 Team</td>
-                    <td class="ch24">0</td>
                 </tr>
                 <tr>
                     <td class="ch24">22.</td>
@@ -348,114 +348,125 @@
         </section>
 
         <section class="section-2">
-    <h2>Formula 1 Csapatok és Pontok</h2>
+            <h2>Formula 1 Csapatok és Pontok</h2>
 
-    <table class="teams-2024">
-            <tr>
-                <th>Pos</th>
-                <th>Kép</th>
-                <th>Csapat</th>
-                <th>Pontok</th>
-            </tr>
-            <tr>
-                <td class="team24">1</td>
-                <td class="team24"><img src="./img/mclaren-1.png" alt="McLaren"></td>
-                <td class="team24">McLaren Mercedes</td>
-                <td class="team24">640</td>
-            </tr>
-            <tr>
-                <td class="team24">2</td>
-                <td class="team24"><img src="./img/ferrari-1.png" alt="Ferrari"></td>
-                <td class="team24">Ferrari</td>
-                <td class="team24">619</td>
-            </tr>
-            <tr>
-                <td class="team24">3</td>
-                <td class="team24"><img src="./img/redbull-1.png" alt="Red Bull"></td>
-                <td class="team24">Red Bull Racing Honda RBPT</td>
-                <td class="team24">581</td>
-            </tr>
-            <tr>
-                <td class="team24">4</td>
-                <td class="team24"><img src="./img/mercedes-logo.png" alt="Mercedes"></td>
-                <td class="team24">Mercedes</td>
-                <td class="team24">446</td>
-            </tr>
-            <tr>
-                <td class="team24">5</td>
-                <td class="team24"><img src="./img/aston-martin.png" alt="Aston Martin"></td>
-                <td class="team24">Aston Martin Aramco Mercedes</td>
-                <td class="team24">92</td>
-            </tr>
-            <tr>
-                <td class="team24">6</td>
-                <td class="team24"><img src="./img/alpine-1.png" alt="Alpine"></td>
-                <td class="team24">Alpine Renault</td>
-                <td class="team24">59</td>
-            </tr>
-            <tr>
-                <td class="team24">7</td>
-                <td class="team24"><img src="./img/haas-1.png" alt="Haas"></td>
-                <td class="team24">Haas Ferrari</td>
-                <td class="team24">54</td>
-            </tr>
-            <tr>
-                <td class="team24">8</td>
-                <td class="team24"><img src="./img/visarb-1.png" alt="RB Honda"></td>
-                <td class="team24">RB Honda RBPT</td>
-                <td class="team24">46</td>
-            </tr>
-            <tr>
-                <td class="team24">9</td>
-                <td class="team24"><img src="./img/williams-2.png" alt="Williams"></td>
-                <td class="team24">Williams Mercedes</td>
-                <td class="team24">17</td>
-            </tr>
-            <tr>
-                <td class="team24">10</td>
-                <td class="team24"><img src="./img/kick-sauber.png" alt="Sauber"></td>
-                <td class="team24">Kick Sauber Ferrari</td>
-                <td class="team24">4</td>
-            </tr>
-       </table>
+            <table class="teams-2024">
+                <tr>
+                    <th>Pos</th>
+                    <th>Kép</th>
+                    <th>Csapat</th>
+                    <th>Pontok</th>
+                </tr>
+                <tr>
+                    <td class="team24">1</td>
+                    <td class="team24"><img src="./img/mclaren-1.png" alt="McLaren"></td>
+                    <td class="team24">McLaren Mercedes</td>
+                    <td class="team24">666</td>
+                </tr>
+                <tr>
+                    <td class="team24">2</td>
+                    <td class="team24"><img src="./img/ferrari-1.png" alt="Ferrari"></td>
+                    <td class="team24">Ferrari</td>
+                    <td class="team24">652</td>
+                </tr>
+                <tr>
+                    <td class="team24">3</td>
+                    <td class="team24"><img src="./img/redbull-1.png" alt="Red Bull"></td>
+                    <td class="team24">Red Bull Racing Honda RBPT</td>
+                    <td class="team24">589</td>
+                </tr>
+                <tr>
+                    <td class="team24">4</td>
+                    <td class="team24"><img src="./img/mercedes-logo.png" alt="Mercedes"></td>
+                    <td class="team24">Mercedes</td>
+                    <td class="team24">468</td>
+                </tr>
+                <tr>
+                    <td class="team24">5</td>
+                    <td class="team24"><img src="./img/aston-martin.png" alt="Aston Martin"></td>
+                    <td class="team24">Aston Martin Aramco Mercedes</td>
+                    <td class="team24">94</td>
+                </tr>
+                <tr>
+                    <td class="team24">6</td>
+                    <td class="team24"><img src="./img/alpine-1.png" alt="Alpine"></td>
+                    <td class="team24">Alpine Renault</td>
+                    <td class="team24">65</td>
+                </tr>
+                <tr>
+                    <td class="team24">7</td>
+                    <td class="team24"><img src="./img/haas-1.png" alt="Haas"></td>
+                    <td class="team24">Haas Ferrari</td>
+                    <td class="team24">58</td>
+                </tr>
+                <tr>
+                    <td class="team24">8</td>
+                    <td class="team24"><img src="./img/visarb-1.png" alt="RB Honda"></td>
+                    <td class="team24">RB Honda RBPT</td>
+                    <td class="team24">46</td>
+                </tr>
+                <tr>
+                    <td class="team24">9</td>
+                    <td class="team24"><img src="./img/williams-2.png" alt="Williams"></td>
+                    <td class="team24">Williams Mercedes</td>
+                    <td class="team24">17</td>
+                </tr>
+                <tr>
+                    <td class="team24">10</td>
+                    <td class="team24"><img src="./img/kick-sauber.png" alt="Sauber"></td>
+                    <td class="team24">Kick Sauber Ferrari</td>
+                    <td class="team24">4</td>
+                </tr>
+            </table>
 
 </body>
+
 </html>
 
-        </section>
+</section>
 
-        <section class="section-3">
-            <h4>A 2025-ös F1-es versenynaptár</h4>
+<section class="section-3">
+    <h4>A 2025-ös F1-es versenynaptár</h4>
 
-            <ul class="f1-list">
-                <li>Március 14-16. Ausztrál Nagydíj, Melbourne</li>
-                <li>Március 21-23. Kínai Nagydíj, Sanghaj</li>
-                <li>Április 4-6. Japán Nagydíj, Suzuka</li>
-                <li>Április 11-13. Bahreini Nagydíj, Szahír</li>
-                <li>Április 18-20. Szaúd-arábiai Nagydíj, Dzsidda</li>
-                <li>Május 2-4. Miami Nagydíj, Miami</li>
-                <li>Május 16-18. Emilia-romagnai Nagydíj, Imola</li>
-                <li>Május 23-25. Monacói Nagydíj, Monte-Carlo</li>
-                <li>Május 30-június 1. Spanyol Nagydíj, Barcelona</li>
-                <li>Június 13-15. Kanadai Nagydíj, Montreal</li>
-                <li>Június 27-29. Osztrák Nagydíj, Spielberg</li>
-                <li>Július 4-6. Brit Nagydíj, Silverstone</li>
-                <li>Július 25-27. Belga Nagydíj, Spa-Francorchamps</li>
-                <li>Augusztus 1-3. Magyar Nagydíj, Hungaroring</li>
-                <li>Augusztus 29-31. Holland Nagydíj, Zandvoort</li>
-                <li>Szeptember 5-7. Olasz Nagydíj, Monza</li>
-                <li>Szeptember 19-21. Azerbajdzsáni Nagydíj, Baku</li>
-                <li>Október 3-5. Szingapúri Nagydíj, Szingapúr</li>
-                <li>Október 17-19. USA Nagydíj, Austin</li>
-                <li>Október 24-26. Mexikóvárosi Nagydíj, Mexikóváros</li>
-                <li>November 7-9. Sao Pauló-i Nagydíj, Interlagos</li>
-                <li>November 20-22. Las Vegas-i Nagydíj, Las Vegas (szombati futam)</li>
-                <li>November 28-30. Katari Nagydíj, Lusail</li>
-                <li>December 5-7. Abu Dhabi Nagydíj, Abu Dhabi</li>
-            </ul>
+    <ul class="f1-list">
+        <li>Március 14-16. Ausztrál Nagydíj, Melbourne</li>
+        <li>Március 21-23. Kínai Nagydíj, Sanghaj</li>
+        <li>Április 4-6. Japán Nagydíj, Suzuka</li>
+        <li>Április 11-13. Bahreini Nagydíj, Szahír</li>
+        <li>Április 18-20. Szaúd-arábiai Nagydíj, Dzsidda</li>
+        <li>Május 2-4. Miami Nagydíj, Miami</li>
+        <li>Május 16-18. Emilia-romagnai Nagydíj, Imola</li>
+        <li>Május 23-25. Monacói Nagydíj, Monte-Carlo</li>
+        <li>Május 30-június 1. Spanyol Nagydíj, Barcelona</li>
+        <li>Június 13-15. Kanadai Nagydíj, Montreal</li>
+        <li>Június 27-29. Osztrák Nagydíj, Spielberg</li>
+        <li>Július 4-6. Brit Nagydíj, Silverstone</li>
+        <li>Július 25-27. Belga Nagydíj, Spa-Francorchamps</li>
+        <li>Augusztus 1-3. Magyar Nagydíj, Hungaroring</li>
+        <li>Augusztus 29-31. Holland Nagydíj, Zandvoort</li>
+        <li>Szeptember 5-7. Olasz Nagydíj, Monza</li>
+        <li>Szeptember 19-21. Azerbajdzsáni Nagydíj, Baku</li>
+        <li>Október 3-5. Szingapúri Nagydíj, Szingapúr</li>
+        <li>Október 17-19. USA Nagydíj, Austin</li>
+        <li>Október 24-26. Mexikóvárosi Nagydíj, Mexikóváros</li>
+        <li>November 7-9. Sao Pauló-i Nagydíj, Interlagos</li>
+        <li>November 20-22. Las Vegas-i Nagydíj, Las Vegas (szombati futam)</li>
+        <li>November 28-30. Katari Nagydíj, Lusail</li>
+        <li>December 5-7. Abu Dhabi Nagydíj, Abu Dhabi</li>
+    </ul>
 
-        </section>
-    </main>
+</section>
+</main>
+<footer>
+    <nav class="footer-menu">
+        <ul>
+            <li class="logo">
+                <a href="https://www.formula1.com/" target="_blank"><img src="./img/f1-logo.png" alt="F1 logo"></a>
+            </li>
+            <li>
+                <a>Ez egy információs oldal! Minden jog https://www.formula1.com/</a>
+            </li>
+</footer>
 </body>
 
 </html>
