--- a/girusantal_hf7/circuits.html
+++ b/girusantal_hf7/circuits.html
@@ -15,9 +15,9 @@
 
     <nav>
         <ul>
-            <li class="logo">
+            <!-- <li class="logo">
                 <a href="https://www.formula1.com/"><img src="./img/f1-logo.png" alt="F1 logo"></a>
-            </li>
+            </li> -->
             <li>
                 <a href="index.html">Főmenü</a>
             </li>
