basic files created

--- a/girusantal_hf7/circuits.html
+++ b/girusantal_hf7/circuits.html
@@ -36,169 +36,241 @@
     <section class="flex-container">
         <section class="circuits">
             <section class="melbourne">
-                <p>Melbourne</p>
+                <span>Melbourne</span>
                 <img src="img/2-melbourne.png" alt="Melbourne">
+                <p>Pályahossz: 5303 m</p>
+                <p>Szezonok száma: 24</p>
+                <p>Verseny hétvége 2025</p>
                 <p>március 14.–március 16.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="sanghai">
-                <p>Sanghai</p>
+                <span>Sanghai</span>
                 <img src="img/3-sanghai.png" alt="Sanghai">
+                <p>Pályahossz: 5451 m</p>
+                <p>Szezonok száma: 16</p>
+                <p>Verseny hétvége 2025</p>
                 <p>március 21.–március 23.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="suzuka">
-                <p>Szuzuka</p>
+                <span>Szuzuka</span>
                 <img src="img/4-suzuka.png" alt="Szuzuka">
+                <p>Pályahossz: 5807 m</p>
+                <p>Szezonok száma: 31</p>
+                <p>Verseny hétvége 2025</p>
                 <p>április 4.–április 6.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="sahir">
-                <p>Szahír</p>
+                <span>Szahír</span>
                 <img src="img/1-sahir.png" alt="Szahír">
+                <p>Pályahossz: 5412 m</p>
+                <p>Szezonok száma: 18</p>
+                <p>Verseny hétvége 2025</p>
                 <p>április 11.–április 13.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="jeddah">
-                <p>Dzsidda</p>
+                <span>Dzsidda</span>
                 <img src="img/5-Dzsidda.png" alt="Dzsidda">
+                <p>Pályahossz: 6174 m</p>
+                <p>Szezonok száma: 2</p>
+                <p>Verseny hétvége 2025</p>
                 <p>április 18.–április 20.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="miami">
-                <p>Miami</p>
+                <span>Miami</span>
                 <img src="img/6-miami.png" alt="Miami">
+                <p>Pályahossz: 5410 m</p>
+                <p>Szezonok száma: 0</p>
+                <p>Verseny hétvége 2025</p>
                 <p>május 2.–május 4.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="imola">
-                <p>Imola</p>
+                <span>Imola</span>
                 <img src="img/7-imola.png" alt="Imola">
+                <p>Pályahossz: 4909 m</p>
+                <p>Szezonok száma: 29</p>
+                <p>Verseny hétvége 2025</p>
                 <p>május 16.–május 18.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="monte-carlo">
-                <p>Monte Carlo</p>
+                <span>Monte Carlo</span>
                 <img src="img/8-monte-carlo.png" alt="Monte Carlo">
+                <p>Pályahossz: 3337 m</p>
+                <p>Szezonok száma: 67</p>
+                <p>Verseny hétvége 2025</p>
                 <p>május 23.–május 25.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="barcelona">
-                <p>Barcelona</p>
+                <span>Barcelona</span>
                 <img src="img/9-barcelona.png" alt="Barcelona">
+                <p>Pályahossz: 4657 m</p>
+                <p>Szezonok száma: 53</p>
+                <p>Verseny hétvége 2025</p>
                 <p>május 30.–június 1.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="montreal">
-                <p>Montreal</p>
+                <span>Montreal</span>
                 <img src="img/10-montreal.png" alt="Montreal">
+                <p>Pályahossz: 4361 m</p>
+                <p>Szezonok száma: 40</p>
+                <p>Verseny hétvége 2025</p>
                 <p>június 13.–június 15.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="spielberg">
-                <p>Spielberg</p>
+                <span>Spielberg</span>
                 <img src="img/11-spielberg.png" alt="Spilberg">
+                <p>Pályahossz: 4318 m</p>
+                <p>Szezonok száma: 35</p>
+                <p>Verseny hétvége 2025</p>
                 <p>június 27.–június 29.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="silverstone">
-                <p>Silverstone</p>
+                <span>Silverstone</span>
                 <img src="img/12-silverstone.png" alt="Silverstone">
+                <p>Pályahossz: 5891 m</p>
+                <p>Szezonok száma: 56</p>
+                <p>Verseny hétvége 2025</p>
                 <p>július 4.–július 6.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="spa">
-                <p>Spa-Francorchamps</p>
+                <span>Spa-Francorchamps</span>
                 <img src="img/13-spa-francorchamps.png" alt="Spa Fancorchamps">
+                <p>Pályahossz: 7004 m</p>
+                <p>Szezonok száma: 54</p>
+                <p>Verseny hétvége 2025</p>
                 <p>július 25.–július 27.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="hungaroring">
-                <p>Mogyoród</p>
+                <span>Mogyoród</span>
                 <img src="img/14-mogyorod.png" alt="Mogyoród">
+                <p>Pályahossz: 4381 m</p>
+                <p>Szezonok száma: 36</p>
+                <p>Verseny hétvége 2025</p>
                 <p>augusztus 1.–augusztus 3.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="zandvoort">
-                <p>Zandvoort</p>
+                <span>Zandvoort</span>
                 <img src="img/15-zandvoort.png" alt="Zandvoort">
+                <p>Pályahossz: 4259 m</p>
+                <p>Szezonok száma: 31</p>
+                <p>Verseny hétvége 2025</p>
                 <p>augusztus 29.–augusztus 31.</p>
             </section>
         </section>
         <section class="circuits">
-            <p>Monza</p>
+            <span>Monza</span>
             <img src="img/16-monza.png" alt="Monza">
+            <p>Pályahossz: 5793 m</p>
+            <p>Szezonok száma: 71</p>
+            <p>Verseny hétvége 2025</p>
             <p>szeptember 5.–szeptember 7.</p>
         </section>
         <section class="circuits">
             <section class="baku">
-                <p>Baku</p>
+                <span>Baku</span>
                 <img src="img/17-baku.png" alt="Baku">
+                <p>Pályahossz: 6003 m</p>
+                <p>Szezonok száma: 5</p>
+                <p>Verseny hétvége 2025</p>
                 <p>szeptember 19.–szeptember 21.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="singapore">
-                <p>Szingapúr</p>
+                <span>Szingapúr</span>
                 <img src="img/18-singapore.png" alt="Szingapúr">
+                <p>Pályahossz: 5063 m</p>
+                <p>Szezonok száma: 12</p>
+                <p>Verseny hétvége 2025</p>
                 <p>október 3.–október 5.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="austin">
-                <p>Austin</p>
+                <span>Austin</span>
                 <img src="img/19-austin.png" alt="Austin">
+                <p>Pályahossz: 5513 m</p>
+                <p>Szezonok száma: 9</p>
+                <p>Verseny hétvége 2025</p>
                 <p>október 17.–október 19.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="mexicocity">
                 <section class="mexicocity">
-                    <p>Mexikóváros</p>
+                    <span>Mexikóváros</span>
                     <img src="img/20-mexicocity.png" alt="Mexikóváros">
+                    <p>Pályahossz: 4304 m</p>
+                    <p>Szezonok száma: 21</p>
+                    <p>Verseny hétvége 2025</p>
                     <p>október 24.–október 26.</p>
                 </section>
             </section>
         </section>
         <section class="circuits">
             <section class="interlagos">
-                <p>Interlagos</p>
+                <span>Interlagos</span>
                 <img src="img/21-interlagos.png" alt="Interlagos">
+                <p>Pályahossz: 4309 m</p>
+                <p>Szezonok száma: 38</p>
+                <p>Verseny hétvége 2025</p>
                 <p>november 7.–november 9.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="las-vegas">
-                <p>Las Vegas</p>
+                <span>Las Vegas</span>
                 <img src="img/22-las-vegas.png" alt="Las Vegas">
+                <p>Pályahossz: 3650 m</p>
+                <p>Szezonok száma: 2</p>
+                <p>Verseny hétvége 2025</p>
                 <p>november 20.–november 22.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="doba">
-                <p>Doha</p>
+                <span>Doha</span>
                 <img src="img/23-doha.png" alt="Doha">
+                <p>Pályahossz: 5380 m</p>
+                <p>Szezonok száma: 1</p>
+                <p>Verseny hétvége 2025</p>
                 <p>november 28.–november 30.</p>
             </section>
         </section>
         <section class="circuits">
             <section class="abud-dzabi">
-                <p>Abu Dhabi</p>
+                <span>Abu Dhabi</span>
                 <img src="img/24-abu-dzabi.png" alt="Abu Dzabi">
+                <p>Pályahossz: 5281 m</p>
+                <p>Szezonok száma: 13</p>
+                <p>Verseny hétvége 2025</p>
                 <p> december 5.–december 7.</p>
             </section>
         </section>
