--- a/girusantal_hf7/index.html
+++ b/girusantal_hf7/index.html
@@ -14,9 +14,6 @@
 <body>
     <nav>
         <ul>
-            <!-- <li class="logo">
-                <a href="https://www.formula1.com/"><img src="./img/f1-logo.png" alt="F1 logo"></a>
-            </li> -->
             <li>
                 <a href="index.html">Főmenü</a>
             </li>
@@ -34,7 +31,7 @@
     <main>
         <sidebar>
             <section class="first-question">
-                <span>Melyik verseny a kedvence?</span>
+                <span>Szavazzon melyik verseny a kedvence?</span>
                 <section class="circuit">
                     <section class="circuit-1">
                         <label for="circuit-1">Melbourne</label>
@@ -460,11 +457,10 @@
 <footer>
     <nav class="footer-menu">
         <ul>
-            <li class="logo">
-                <a href="https://www.formula1.com/" target="_blank"><img src="./img/f1-logo.png" alt="F1 logo"></a>
-            </li>
             <li>
-                <a>Ez egy információs oldal! Minden jog https://www.formula1.com/</a>
+                <a href="https://www.formula1.com/" target="_blank">
+                    <img src="img/f1-logo.png" alt="F1 logo">
+                    Ez egy információs oldal! Minden jog https://www.formula1.com/</a>
             </li>
 </footer>
 </body>
