basic files created

--- a/girusantal_vizsga/circuits.html
+++ b/girusantal_vizsga/circuits.html
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-
+    <!-- <header id="f1-head">
+        <img src="img/pirelli-blue.png" alt="Pirelli" class="animated-image">
+    </header> -->
     <nav>
         <ul>
-            <!-- <li class="logo">
-                <a href="https://www.formula1.com/"><img src="./img/f1-logo.png" alt="F1 logo"></a>
-            </li> -->
+            <img src="img/pirelli-blue.png" alt="Pirelli" class="animated-image">
             <li>
                 <a href="index.html">Főmenü</a>
             </li>
-            <li>
+            <li class="active">
                 <a href="circuits.html">Pályák</a>
             </li>
             <li>
@@ -32,7 +32,6 @@
             </li>
         </ul>
     </nav>
-
     <section class="flex-container">
         <section class="circuits">
             <section class="melbourne">
@@ -285,6 +284,8 @@
                         Ez egy információs oldal! Minderről bővebben: https://www.formula1.com/</a>
                 </li>
     </footer>
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
