--- a/girusantal_vizsga/teams.html
+++ b/girusantal_vizsga/teams.html
@@ -23,7 +23,7 @@
             <li>
                 <a href="circuits.html">Pályák</a>
             </li>
-            <li>
+            <li class="active">
                 <a href="teams.html">Istállók</a>
             </li>
             <li>
@@ -115,11 +115,11 @@
             <img class="team-logo" src="./img/redbull-1.png" alt="Red Bull">
             <div class="team-info">Oracle Red Bull Racing <br> Milton Keynes, Nagy-Britannia <br><br> Motor: Honda <br> Első verseny: 1997 <br> Világbajnoki cím: 6 <br> Csapatfőnök: Christian Horner</div>
             <img class="driver-1" src="./img/Max_Verstappen.webp" alt="Max Verstappen">
-            <img class="driver-2" src="./img/perez-2.png" alt="Sergio Perez">
+            <img class="driver-2" src="./img/lawson.png" alt="Sergio Perez">
             <div class="driver1-info">Max Verstappen <br><br> Hollandia <br> 1997.09.30 <br><br> Versenyek: 209 <br> Dobogó: 112 <br> Világbajnoki cím: 4</div>
-            <div class="driver2-info">Sergio Perez <br><br> Mexico <br> 1990.01.26 <br><br> Versenyek: 282 <br> Dobogó: 39 <br> Világbajnoki cím: 0</div>
+            <div class="driver2-info">Liam Lawson <br><br> Új-Zéland <br> 2002.02.11 <br><br> Versenyek: 11 <br> Dobogó: 0 <br> Világbajnoki cím: 0</div>
             <span class="driver-1-name">Max Verstappen</span>
-            <span class="driver-2-name">Sergio Perez</span>
+            <span class="driver-2-name">Liam Lawson</span>
         </section>
         <section class="team-9">
             <span class="team-name">Kick Sauber-Ferrari</span>
