--- a/girusantal_vizsga/index.html
+++ b/girusantal_vizsga/index.html
@@ -12,9 +12,13 @@
 </head>
 
 <body>
+
+    <header id="f1-head">
+        <img src="img/pirelli-blue.png" alt="Pirelli" class="animated-image">
+        </header>
     <nav>
         <ul>
-            <li>
+            <li class="active">
                 <a href="index.html">Főmenü</a>
             </li>
             <li>
@@ -144,21 +148,29 @@
                     </section>
                 </section>
 
-                <button id="myBtn" onclick="javascript:alert('Köszönjük a szavazatát!')">Mehet</button>
+                <button id="myBtn">Mehet</button>
+                <button id="resetBtn">Törlés</button>
 
                 <script>
-                    var input = document.getElementById("myInput");
-                    input.addEventListener("keypress", function (event) {
-                        if (event.key === "Enter") {
-                            event.preventDefault();
-                            document.getElementById("myBtn").click();
-                        }
+                    document.getElementById("myBtn").addEventListener("click", function () {
+                        var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+
+                        checkboxes.forEach(function (checkbox) {
+                            checkbox.checked = false;
+                        });
+
+                        alert('Köszönjük a szavazatát!');
+                    });
+
+                    document.getElementById("resetBtn").addEventListener("click", function () {
+                        var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+
+                        checkboxes.forEach(function (checkbox) {
+                            checkbox.checked = false;
+                        });
                     });
                 </script>
             </section>
-
-
-
 
         </sidebar>
         <section class="section-1">
