--- a/girusantal_vizsga/race-calendar.html
+++ b/girusantal_vizsga/race-calendar.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav>
+       <nav>
         <ul>
             <!-- <li class="logo">
                 <a href="https://www.formula1.com/"><img src="./img/f1-logo.png" alt="F1 logo"></a>
@@ -26,7 +26,7 @@
             <li>
                 <a href="teams.html">Istállók</a>
             </li>
-            <li>
+            <li class="active">
                 <a href="race-calendar.html">Versenynaptár</a>
             </li>
         </ul>
@@ -858,7 +858,7 @@
         </section>
     </section>
     </section>
-    <script src="./script.js"></script>
+ 
 
     <footer>
         <nav class="footer-menu">
@@ -869,6 +869,8 @@
                         Ez egy információs oldal! Minderről bővebben: https://www.formula1.com/</a>
                 </li>
     </footer>
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
