--- a/girusantal_vizsga/teams.html
+++ b/girusantal_vizsga/teams.html
@@ -106,7 +106,7 @@
             <img class="driver-1" src="./img/tsunoda-2.png" alt="Yuki Tsunoda">
             <img class="driver-2" src="./img/anonymus.png" alt="Lando Norris">
             <div class="driver1-info">Yuki Tsunoda <br><br> Japán <br> 2000.05.11 <br><br> Versenyek: 90 <br> Dobogó: 0 <br> Világbajnoki cím: 0</div>
-            <div class="driver2-info">Ismeretlen <br><br> Talán <br> Liam Lawson <br> a legesélyesebb <br><br> vagy <br> Isack Hadjar</div>
+            <div class="driver2-info">Ismeretlen <br><br> Talán <br>a legesélyesebb <br><br>Isack Hadjar</div>
             <span class="driver-1-name">Yuki Tsunoda</span>
             <span class="driver-2-name">Ismeretlen</span>
         </section>
