--- a/girusantal_vizsga/race-calendar.html
+++ b/girusantal_vizsga/race-calendar.html
@@ -866,7 +866,7 @@
                 <li>
                     <a href="https://www.formula1.com/" target="_blank">
                         <img src="img/f1-logo.png" alt="F1 logo">
-                        Ez egy információs oldal! Minderről bővebben: https://www.formula1.com/</a>
+                        Ez egy információs oldal! További információ: https://www.formula1.com/</a>
                 </li>
     </footer>
 
