--- a/girusantal_vizsga/teams.html
+++ b/girusantal_vizsga/teams.html
@@ -104,9 +104,9 @@
             <img class="team-logo" src="./img/visarb-1.png" alt="Mercedes">
             <div class="team-info">Visa Cash App RB Formula One Team <br> Faenza, Olaszország <br><br> Motor: Honda <br> Első verseny: 1985 <br> Világbajnoki cím: 0 <br> Csapatfőnök: Laurent Mekies</div>
             <img class="driver-1" src="./img/tsunoda-2.png" alt="Yuki Tsunoda">
-            <img class="driver-2" src="./img/anonymus.png" alt="Lando Norris">
+            <img class="driver-2" src="./img/isaac hadjar.png" alt="Isack Hadjar">
             <div class="driver1-info">Yuki Tsunoda <br><br> Japán <br> 2000.05.11 <br><br> Versenyek: 90 <br> Dobogó: 0 <br> Világbajnoki cím: 0</div>
-            <div class="driver2-info">Ismeretlen <br><br> Talán <br>a legesélyesebb <br><br>Isack Hadjar</div>
+            <div class="driver2-info">Isack Hadjar <br><br> Franciaország <br> 2004.09.28 <br><br> Versenyek: 0 <br> Dobogó: 0 <br> Világbajnoki cím: 0</div>
             <span class="driver-1-name">Yuki Tsunoda</span>
             <span class="driver-2-name">Ismeretlen</span>
         </section>
