--- a/girusantal_vizsga/teams.html
+++ b/girusantal_vizsga/teams.html
@@ -108,7 +108,7 @@
             <div class="driver1-info">Yuki Tsunoda <br><br> Japán <br> 2000.05.11 <br><br> Versenyek: 90 <br> Dobogó: 0 <br> Világbajnoki cím: 0</div>
             <div class="driver2-info">Isack Hadjar <br><br> Franciaország <br> 2004.09.28 <br><br> Versenyek: 0 <br> Dobogó: 0 <br> Világbajnoki cím: 0</div>
             <span class="driver-1-name">Yuki Tsunoda</span>
-            <span class="driver-2-name">Ismeretlen</span>
+            <span class="driver-2-name">Isack Hadjar</span>
         </section>
         <section class="team-8">
             <span class="team-name">Red Bull Racing</span>
